# bazel-go-example

./: BUILD.bazel  MODULE.bazel  go.mod  go.sum  main.go
examples/01-gazelle-godeps-module-example/: BUILD.bazel  MODULE.bazel  main.go
