# MODULE.bazel
# This file declares the external dependencies for your project.

module(
    name = "go_glog_example",
    version = "1.0",
)

# --- Go Rules Dependency ---
# Fetches the official Bazel rules for building Go code.
bazel_dep(name = "rules_go", version = "0.56.1")
bazel_dep(name = "gazelle", version = "0.45.0")

# --- Go SDK Extension ---
# Loads the Go SDK extension from rules_go.
#go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
# Use the default Go SDK provided by the extension.
#use_repo(go_sdk, "go_default_sdk")

# --- Gazelle Extension for Go Dependencies ---
# Loads the go_deps extension from Gazelle, which will read dependencies
# from the go.mod file.
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")

# Read dependencies from the go.mod file. This is the standard way
# to manage Go dependencies with Bzlmod.
go_deps.from_file(go_mod = "//:go.mod")

# --- Make the Repository Visible ---
# Explicitly use the repository fetched by gazelle from the go.mod file.
# This makes '@com_github_golang_glog' available to your BUILD files.
use_repo(go_deps, "com_github_golang_glog", "com_github_go_openapi_strfmt")
